Tue Aug 21 12:25:45 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/SSL/SSL_Context.h:
        * ace/SSL/SSL_Context.inl:

          Solaris studio compilers amongst others were issuing warnings due to an
          incorrect type of function pointer (i.e. not extern "C", but standard
          C++ type) being stored/used of the form:

            Warning (Anachronism): Formal argument callback of type
              extern "C" int(*)(int,x509_store_ctx_st*)
            in call to
              SSL_CTX_set_verify(ssl_ctx_st*, int, extern "C" int(*)(int,x509_store_ctx_st*))
            is being passed
              int(*)(int,x509_store_ctx_st*)

          when the C++ code was providing callback functions to certain C system SSL
          library calls.

          Unfortunatly you cannot specify extern "C" linkage anywhere inside a
          class declaration or inside a function prototype for individual
          parameters. I.e:

            class { extern "C" int (*callback_) (int, void *); };
        
          to store an extern "C" function pointer as a data member of the
          class is illegal, as is:
        
            void function (extern "C" int (*callback) (int, void *);

          to declare a function (or a class member) that takes a extern "C"
          function pointer as a parameter.

          Since we need to specify an extern "C" function pointer as a parameter
          to be stored in the class and handled by member functions, we are forced
          to declare a typedef of that extern "C" function pointer outside of the
          class that we can then use. Unfortunatly you also are not allowed to
          simply add the extern "C" to the typedef itself, like this:

            typedef extern "C" int (*extern_C_callback_t) (int, void *);

          instead you have to place the typedef declaration inside an extern "C"
          block, thus:

            extern "C" {