@@ -37,14 +37,15 @@ namespace ACE
         //     SSL_CTX_set_default_passwd_cb(ssl_ctx_st*, extern "C" int(*)(char*,int,int,void*))
         //     is being passed int(*)(char*,int,int,void*).
         // when C library routines are passed CallBack functions pointers that are
-        // actually C++ functions. (Static class member functions are NOTE extern "C" by default.)
+        // actually C++ functions. (Static class member functions are NOT extern "C" by default.)
         //
-        // Unfortunatly you can not specify extern "C" linkage anywhere inside a class
+        // Unfortunatly you cannot specify extern "C" linkage anywhere inside a class
         // declaration or inside a function prototype for individual parameters. We are therefore
         // forced to declare friend functions external to the class to do this job (and of course
-        // the function names can not be overloaded as they are C functions). They can not be
-        // static functions to make them private to the cpp file as they need to be seen by the
-        // class declaration and therefore included in the header file) thus:
+        // the function names cannot be overloaded as they are C functions). They also cannot be
+        // static functions (or annominous namespace) to make them private to the cpp file as
+        // they need to be seen by the class declaration and therefore included in the header file
+        // and so must be global) thus:
         extern "C" {
           int extern_C_verify_certificate_callback (int ok, X509_STORE_CTX* cert_ctx);
           int extern_C_passwd_callback (char* buf, int size, int rwflag, void* user_data);
